--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,6 +76,17 @@
   }
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hidescroll::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hidescroll {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 .dhyana {
   view-transition-name: dhyana;
   width: fit-content;
